# ml-template

./: .common-answers.json.jinja  .flake8  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.jinja  README.md  __init__.py  __version__.py  common.gitlab-ci.yml.jinja  copier.yml  post_update_script.py.jinja  pyproject.toml  {{ _copier_conf.answers_file }}.jinja
docs/: CHANGELOG.md  copier-update.md  dataset-access.md  deployment.md  formatting-code.md  initialisation.md  model-monitoring.md  model-orchestrator.md  model-prediction.md  model-training.md  prerequisites.md  troubleshoting.md
docs/shell_files/: copier.sh  initialise.sh
{{ repo_name }}/core/scripts/: terraform-runner.sh
{{ repo_name }}/core/{% if monitoring == true %}monitoring{% endif %}/: monitoring.gitlab-ci.yml.jinja  readme.md  register_monitoring_config.py  requirements.txt
{{ repo_name }}/core/{% if monitoring == true %}{% if prediction_batch == true %}orchestrator_workflow{% endif %}{% endif %}/: orchestrator.gitlab-ci.yml.jinja  requirements.txt  runner.py
{{ repo_name }}/core/{% if prediction_aws == true %}prediction_aws{% endif %}/: Dockerfile.jinja  prediction.gitlab-ci.yml.jinja
{{ repo_name }}/core/{% if prediction_batch == true %}prediction{% endif %}/: Dockerfile.jinja  migrate_artifact.py  prediction.gitlab-ci.yml.jinja  register_model_version.py  requirements.txt  runner.py  runtime_options.py  schema_validation_runner.py
{{ repo_name }}/env/: pre-prod.env.jinja  prod.env.jinja  stag.env.jinja
{{ repo_name }}/notebooks/: sample_classification.ipynb
(+87 files in other folders)
